--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bom dia mundo</h1>
-    <p> :D </p>
+    <h1>Bom dia mundo e alienígenas</h1>
+    <p> ;D </p>
 </body>
 </html>
